--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,7 @@ github_username:  wonjiyap
 # Build settings
 markdown: kramdown
 theme: minima
+plugins: ""
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
