--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ github_username:  wonjiyap
 
 # Build settings
 markdown: kramdown
-theme: minima
+theme: minimal-mistakes-jekyll
 plugins:
   - jekyll-feed
 
